# SPX-MODEL

./: README.md  app.py  greeks.py  ibkr.py  polygon.py  pyproject.toml  regime.py  svar.py  test_greeks.py
